--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "engines" : { 
+    "npm" : "9.5.1",
+    "node" : "18.16.0"
   }
 }
